# Coffee-mill

./: .gitignore  .gitmodules  CGMutator.cpp  CMakeLists.txt  LICENSE  NinfoSplitter.cpp  PDBtoCG.cpp  README.md  RMSDCalculator.cpp  SequenceExtractor.cpp  SuperImposer.cpp  dcd.hpp  doxyfile.in  ninfo.hpp
.github/workflows/: ccpp.yml
example/: .gitignore  dcd2movie.toml  dcdjoin.toml  dnamutate.toml  ninfo_split.toml
include/mill/: dcd.hpp  math.hpp  mill.hpp  ninfo.hpp  pdb.hpp  traj.hpp
include/mill/common/: AminoAcidCode.hpp  Attribute.hpp  BoundaryCondition.hpp  DeferedReader.hpp  Particle.hpp  Snapshot.hpp  Topology.hpp  Trajectory.hpp  WriterBase.hpp
include/mill/dcd/: DCDReader.hpp  DCDWriter.hpp
include/mill/math/: BestFitStructure.hpp  Constants.hpp  EigenSolver.hpp  Matrix.hpp  Vector.hpp
include/mill/ninfo/: NinfoData.hpp
include/mill/pdb/: PDBAtom.hpp  PDBChain.hpp  PDBReader.hpp  PDBWriter.hpp
include/mill/psf/: PSFWriter.hpp
include/mill/reweight/: PotentialFunction.hpp  ProbabilityDensity.hpp  ReactionCoordinate.hpp  Wham.hpp
include/mill/trr/: TRRReader.hpp  TRRWriter.hpp
include/mill/util/: cmdarg.hpp  color.hpp  isatty.hpp  logger.hpp  range.hpp  scalar_type_of.hpp  string.hpp  write_as_binary.hpp
include/mill/xyz/: XYZReader.hpp  XYZWriter.hpp
includes/: AxisInertia.hpp  AxisSymmetry.hpp  BestFitStructure.cpp  BestFitStructure.hpp  CGMutator.hpp  CylindoricalCoordinate.hpp  CylindricalCoordinate.hpp  DCDData.hpp  DCDReader.hpp  DCDWriter.hpp  DefaultTraits.hpp  EigenSolver.hpp  Matrix.hpp  NinfoBase.hpp  NinfoData.cpp  NinfoData.hpp  NinfoReader.hpp  NinfoSplitter.cpp  NinfoSplitter.hpp  NinfoWriter.cpp  NinfoWriter.hpp  NucTracker.hpp  PDBAtom.hpp  PDBChain.hpp  PDBReader.hpp  PDBResidue.hpp  PDBWriter.hpp  PDBtoCG.hpp  RMSDCalculator.cpp  RMSDCalculator.hpp  SuperImposer.hpp  Vector.hpp  mill.hpp  pdb.hpp  utility.hpp
includes/data/: DCDData.hpp  DCDReader.hpp  PDBAtom.hpp  PDBWriter.hpp  XYZReader.hpp  XYZWriter.hpp
includes/dcd/: DCDDef.hpp  DCDManager.hpp  DCDReader.hpp  DCDWriter.hpp  DCDtest.cpp
includes/defs/: AbstractAtom.hpp  AbstractChain.hpp  AbstractModel.hpp  Defs.hpp
includes/detail/: scalar_type_extractor.hpp  variadic_template.hpp
includes/inp/: InpBase.hpp  InpFileName.hpp  InpNativeInfo.hpp
includes/math/: BestFitStructure.hpp  EigenSolver.hpp  Matrix.hpp  RMSDCalculator.hpp  Vector.hpp
includes/mathematics/: Expression.hpp  Jacobi44.hpp  JacobiMethod.hpp  LinearAlgebra.hpp  LinearAlgebra3.hpp  Matrix.hpp  Matrix33.hpp  Matrix33Exp.hpp  Matrix44.hpp  Matrix44Exp.hpp  MatrixExp.hpp  RealVec.hpp  Vector.hpp  Vector3.hpp  Vector3Exp.hpp  VectorExTen.hpp  VectorExp.hpp  VectorRotation.hpp  linear_algebra.hpp  testJacobi.cpp  testMath.cpp  vectest.cpp
includes/ninfo/: NinfoAicg13.hpp  NinfoAicg14.hpp  NinfoAicgdih.hpp  NinfoAngl.hpp  NinfoBase.hpp  NinfoBasepair.hpp  NinfoBasestack.hpp  NinfoBond.hpp  NinfoContact.hpp  NinfoDef.hpp  NinfoDihd.hpp  NinfoFactory.hpp  NinfoReader.hpp  NinfoWriter.hpp
includes/para/: MassConst.hpp
includes/pdb/: CGBeads.hpp  CGChain.hpp  CGModel.hpp  CGReader.hpp  PDBAtom.hpp  PDBChain.hpp  PDBReader.hpp  PDBdef.hpp  ProteinSeq.hpp
mill/: dcd.hpp  math.hpp  ninfo.hpp  pdb.hpp  traj.hpp  xyz.hpp
mill/common/: AminoAcidCode.hpp  Attribute.hpp  BoundaryCondition.hpp  DeferedReader.hpp  Particle.hpp  Snapshot.hpp  Trajectory.hpp  WriterBase.hpp
mill/data/: DCDData.hpp  DCDReader.hpp  DCDWriter.hpp  NinfoBase.hpp  NinfoData.hpp  NinfoReader.hpp  NinfoWriter.hpp  PDBAtom.hpp  PDBChain.hpp  XYZData.hpp  XYZReader.hpp  XYZWriter.hpp
mill/dcd/: DCDData.hpp  DCDReader.hpp  DCDWriter.hpp
mill/math/: BestFitStructure.hpp  EigenSolver.hpp  Matrix.hpp  RMSDCalculator.hpp  Vector.hpp
mill/ninfo/: NinfoBase.hpp  NinfoData.hpp  NinfoReader.hpp  NinfoWriter.hpp
mill/pdb/: PDBAtom.hpp  PDBChain.hpp  PDBReader.hpp  PDBResidue.hpp  PDBWriter.hpp
mill/reweight/: Histogram.hpp  Wham.hpp
mill/trr/: TRRData.hpp  TRRReader.hpp  TRRWriter.hpp
mill/util/: amino_acid_code.hpp  clamp.hpp  file_extension.hpp  flat_map.hpp  has_xxx.hpp  is_all.hpp  logger.hpp  meta.hpp  read_binary_as.hpp  scalar_type_of.hpp  string.hpp  write_as_binary.hpp
mill/xyz/: XYZData.hpp  XYZReader.hpp  XYZWriter.hpp
misc/completion/: mill.fish
src/: BestFitStructure.cpp  BestFitStructure.hpp  CGInertia.cpp  CGMutator.cpp  CGMutator.hpp  CMakeLists.txt  CalcAxisSym.cpp  CalcInertia.cpp  CylinderReinterpreter.cpp  DCDData.hpp  DCDJoiner.cpp  DCDJoiner.hpp  DCDReader.cpp  DCDReader.hpp  DCDWriter.cpp  DCDWriter.hpp  DCDtoMovie.cpp  DCDtoMovie.hpp  DNAMutator.hpp  DNAdistance.cpp  InputFileReader.cpp  InputFileReader.hpp  NinfoData.hpp  NinfoReader.cpp  NinfoReader.hpp  NinfoSplitter.cpp  NinfoSplitter.hpp  NinfoWriter.hpp  NucDNAdist.cpp  NucImposer.cpp  NucTailTracker.cpp  NucleicSequence.hpp  PDBAtom.cpp  PDBAtom.hpp  PDBChain.hpp  PDBReader.cpp  PDBReader.hpp  PDBResidue.hpp  PDBtoCG.cpp  RMSDCalculator.cpp  (+105 more)
tests/: CMakeLists.txt  test_dcd.cpp  test_dcd_extract.cpp  test_eigen.cpp  test_matrix.cpp  test_matrix_vector.cpp  test_vector.cpp
tests/common/: CMakeLists.txt  test_attribute.cpp  test_boundary_condition.cpp
tests/math/: CMakeLists.txt  test_eigen.cpp  test_matrix.cpp  test_matrix_vector.cpp  test_vector.cpp
tests/util/: CMakeLists.txt  test_file_extension.cpp  test_flat_map.cpp  test_range.cpp  test_string.cpp
tests/xyz/: CMakeLists.txt  test_xyz_reader.cpp
